--- a/notebooks/formatting_games.ipynb
+++ b/notebooks/formatting_games.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b0bff088-e793-48b6-b3f2-98cc42542b18",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e74eb399-c880-4664-84f3-7a62ac42d3da",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "582e328b-8730-4abb-ad6c-a59aa0f7a63c",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1a522b06-f12a-4896-8e70-3f2de3ae9750",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9f2a93c4-c7d8-4b03-95cc-bc5fb8908174",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "174c07cd-5d78-452b-b424-72d95575477e",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "70c4b98c-92fb-477e-8497-ab8f946b1ab3",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c89b89b5-20fe-4b3b-bd58-444a67ee2a40",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b15f8eb3-4c87-4456-8919-84bfe117323e",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6435d64a-7a14-4756-98f8-d57f54649b3b",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f215a063-b9f9-4f5b-a997-c9dd4e316874",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d24dc051-35c0-4928-9b2d-ea311f00cd10",
    "metadata": {},
    "outputs": [],
@@ -150,12 +150,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "4ce14e1e-f063-4840-b724-ec89f215a258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g3=pd.concat([g1,g2,g10,g11,g12,g13,g14,g15,g16,g17,g18],axis=0,ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cfd72f5e-14cb-45d1-95d1-e10e9c72b65c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['characters', 'image','concepts','developers','first_appearance_characters','first_appearance_concepts',\n",
+    "        'first_appearance_locations','first_appearance_objects','franchises','genres','locations','publishers','themes']\n",
+    "\n",
+    "for col in cols:\n",
+    "    def extract_names(x):\n",
+    "        # Convert string to list if needed\n",
+    "        if isinstance(x, str):\n",
+    "            try:\n",
+    "                x = ast.literal_eval(x)\n",
+    "            except:\n",
+    "                return ''\n",
+    "        # If it's a list of dicts, extract 'name'\n",
+    "        if isinstance(x, list):\n",
+    "            names = [d.get('name','') for d in x if isinstance(d, dict)]\n",
+    "            return ', '.join(names)\n",
+    "        return ''\n",
+    "    \n",
+    "    g3[col + '_name'] = g3[col].apply(extract_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "d7fe8749-8642-4b99-ac6a-a19dd52dc26e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "g3=pd.concat([g1,g2,g10,g11,g12,g13,g14,g15,g16,g17,g18],axis=0,ignore_index=True)\n",
     "g3.to_csv('all_giant_games.csv')"
    ]
   },
